# orphan-instance

./: README.md  orphan-instance.cabal
src/: Listy.hs  ListyInstances.hs
