cabal-version:      2.4
name:               orphan-instance
version:            0.1.0.0
author:             Vincent
maintainer:         vpark45@gmail.com
extra-source-files: CHANGELOG.md
                    README.md

library
  exposed-modules:  Listy
                  , ListyInstances
  build-depends:    base ^>=4.12.0.0
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
